better handle auth
